--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
     "next": "15.2.1",
     "react": "^19.0.0",
