--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
     "next": "15.2.1",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
