--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.0.1",
     "remark-gfm": "^4.0.1"
   },
