--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "next": "15.2.1",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.0.1",
-    "remark-gfm": "^4.0.1"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
