fix: update nextjs version

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
-    "next": "15.2.1",
+    "next": "^15.2.6",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
