--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack -p 8080",
     "build": "next build",
-    "start": "next start -p 8080",
+    "preview": "npx serve out",
     "lint": "next lint"
   },
   "dependencies": {
